feat: add new endpoint get articles with create articles
