# apps/api/src/articles/articles-controllers.ts
@@ -1,34 +1,39 @@
 import type { Response, Request } from "express";
 import { serviceArticles } from "./articles-service";
 import * as cheerio from "cheerio";
-import { HttpError } from "utils/error/httpError";
+
+import { articleSchema, articleUrlReq } from "./articles-schema";
+import { getErrorMessage } from "utils/error/errorValidation";
+import { InferType } from "yup";
 
 export const getAllArticles = async (_req: Request, res: Response) => {
   const articles = await serviceArticles.getArticles();
-  res.json(articles);
+  res.json({ articles });
 };
 
-export const createArticle = async (req: Request, res: Response) => {
-  const articleRes = await fetch(
-    "https://www.joshwcomeau.com/css/interactive-guide-to-grid/",
-    { method: "GET" }
-  );
+export const createArticle = async (
+  req: Request<{}, {}, InferType<typeof articleUrlReq>>,
+  res: Response
+) => {
+  const articleRes = await fetch(req.body.url, { method: "GET" });
+
+  if (!articleRes.ok) {
+    return res.status(404).send({ message: "problem during fetching" });
+  }
   const text = await articleRes.text();
   const dom = cheerio.load(text);
-  const title = dom("title").text();
-  const imageSrc = dom('meta[property="og:image"]').attr("content");
-  const url = "https://www.joshwcomeau.com/css/interactive-guide-to-grid/";
-
-  if (!imageSrc) {
-    return res
-      .status(400)
-      .json(new HttpError(400, `Website don't have open graph metadata image`));
-  }
-
-  const createdArticle = await serviceArticles.createArticle({
-    imageSrc,
-    title,
+  const { url } = req.body;
+  const generatedArticle = {
+    imageSrc: dom('meta[property="og:image"]').attr("content"),
+    title: dom("title").text(),
     url,
-  });
-  return res.send({ id: createdArticle.id });
+  };
+
+  try {
+    const securedArticle = articleSchema.validateSync(generatedArticle);
+    const createdArticle = await serviceArticles.createArticle(securedArticle);
+    return res.send({ id: createdArticle.id });
+  } catch (error) {
+    return res.status(400).send({ message: getErrorMessage(error) });
+  }
 };
